test/Fail/Sigma-syntax-7.agda
open import Agda.Builtin.Sigma

postulate
  _ : (@(tactic Set) A : Set) (x) Set
